* bug fixes  * downgrade to java 1.5    * need to inline base64 code  * new eventModel